<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2024-2025 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general_header">

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="fullscreen_mode"
            app:summary="@string/fullscreen_mode_summary"
            app:title="@string/fullscreen_mode" />

        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="enable_offload"
            app:summary="@string/enable_offload_summary"
            app:title="@string/enable_offload" />

        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="enable_float_output"
            app:summary="@string/enable_float_output_summary"
            app:title="@string/enable_float_output" />

        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="stop_playback_on_task_removed"
            app:summary="@string/stop_playback_on_task_removed_summary"
            app:title="@string/stop_playback_on_task_removed" />

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="skip_silence"
            app:summary="@string/skip_silence_summary"
            app:title="@string/skip_silence" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="reset_local_stats"
            app:title="@string/reset_local_stats" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="rescan_media_store"
            app:title="@string/rescan_media_store" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/experimental_header">

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="split_local_devices"
            app:summary="@string/split_local_devices_summary"
            app:title="@string/split_local_devices" />

    </PreferenceCategory>

</PreferenceScreen>
