<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2024-2025 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:paddingTop="24dp"
        android:paddingBottom="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:paddingBottom="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/thumbnailMaterialCardView"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/placeholderImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description_thumbnail"
                    android:padding="8dp"
                    app:tint="?attr/colorOnSurface" />

                <ImageView
                    android:id="@+id/thumbnailImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description_thumbnail" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/labelsLinearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/thumbnailMaterialCardView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginStart="0dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/artistNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/albumTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?attr/colorOnSurface" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/playNowListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/action_play"
            app:leadingIconImage="@drawable/ic_play_arrow" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/addToQueueListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_add_to_queue"
            app:leadingIconImage="@drawable/ic_add_to_queue" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/playNextListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_play_next"
            app:leadingIconImage="@drawable/ic_queue_play_next" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/addOrRemoveFromFavoritesListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/add_to_favorites"
            app:leadingIconImage="@drawable/ic_favorite" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/removeFromPlaylistListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:headlineText="@string/audio_remove_from_playlist"
            app:leadingIconImage="@drawable/ic_playlist_remove" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/addOrRemoveFromPlaylistsListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_add_or_remove_from_playlists"
            app:leadingIconImage="@drawable/ic_playlist_add" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/openAlbumListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/open_album"
            app:leadingIconImage="@drawable/ic_album" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/openArtistListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/open_artist"
            app:leadingIconImage="@drawable/ic_person" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/openGenreListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/open_genre"
            app:leadingIconImage="@drawable/ic_genres" />

    </LinearLayout>

    <org.lineageos.twelve.ui.views.FullscreenLoadingProgressBar
        android:id="@+id/fullscreenLoadingProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>
